--- a/Frontend/src/app/Schools/Schools.component.html
+++ b/Frontend/src/app/Schools/Schools.component.html
@@ -1,1 +1,27 @@
-<h1>Schools</h1>
+<div class="container">
+  <h2>Lista de Escolas</h2>
+  <button class="btn btn-primary mb-3" (click)="openEdit({ codEscola: '', descricao: '' })">Adicionar Nova Escola</button>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Código da Escola</th>
+        <th>Descrição</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let school of schools">
+        <td>{{ school.codEscola }}</td>
+        <td>{{ school.descricao }}</td>
+        <td>
+          <button class="btn btn-secondary" (click)="openEdit(school)">Editar</button>
+          <button type="button" class="btn btn-danger" (click)="DeleteSchool(school.codEscola)" >Excluir Aluno</button>
+
+        </td>
+      </tr>
+      <tr *ngIf="schools.length > 0">
+        <td colspan="8">Total Schools: {{ schools.length }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
