--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,3 @@
-<nav>
-  <a routerLink="/">Home</a>
-  <a routerLink="/about">About</a>
-</nav>
-
 <div class="container">
-  <router-outlet></router-outlet> </div>
+  <router-outlet></router-outlet>
+</div>
