--- a/Frontend/src/app/students/students.component.html
+++ b/Frontend/src/app/students/students.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="d-flex flex-column justify-content-between">
 
     <div class="d-flex flex-row justify-content-between ">
@@ -24,7 +24,7 @@
 
 
 
-  <table class="table table-striped table-bordered mx-auto" style="max-width: 700px;">
+  <table class="table table-striped table-bordered mx-auto  mt-4" style="max-width: 700px;">
     <thead>
       <tr>
         <th scope="col">Nome</th>
