--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,3 +1,26 @@
+<ng-container *ngIf="!isLoginPage()">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Meu Aplicativo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/schools" routerLinkActive="active">Escolas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/students" routerLinkActive="active">Alunos</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</ng-container>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
